[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_examples"
version = "0"
description = "Some techniques for working with graph data using SurrealDB"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "wget",
    "pandas-stubs",
    "surrealdb  == 1.0.4",
    "tqdm",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "python-dotenv",
    "ollama",
    "google.generativeai",
    "openai",
    "fasttext",
    "edgartools",
    "bs4",
    "transformers",
    "torch",
    "openpyxl"
]

[tool.poetry.group.apple]
optional = true
dependencies = ["spacy[apple]"]
[tool.poetry.group.apple.markers]
platform_system = "Darwin"
platform_machine = "arm64"



[project.scripts]
create_db = "surrealdb_rag.scripts:create_database"
download_glove = "surrealdb_rag.scripts:download_glove"
insert_glove = "surrealdb_rag.scripts:insert_glove"
download_wiki = "surrealdb_rag.scripts:download_wiki"
train_wiki = "surrealdb_rag.scripts:train_wiki"
insert_wiki_fs = "surrealdb_rag.scripts:insert_wiki_fs"
add_wiki_vectors = "surrealdb_rag.scripts:add_vectors_to_wiki"
insert_wiki = "surrealdb_rag.scripts:insert_wiki"
setup_wiki = "surrealdb_rag.scripts:setup_wiki"
download_edgar = "surrealdb_rag.scripts:download_edgar"
train_edgar = "surrealdb_rag.scripts:train_edgar"
insert_edgar_fs = "surrealdb_rag.scripts:insert_edgar_fs"
add_edgar_vectors = "surrealdb_rag.scripts:add_vectors_to_edgar"
insert_edgar = "surrealdb_rag.scripts:insert_edgar"
setup_edgar = "surrealdb_rag.scripts:setup_edgar"
add_ai_edgar_vectors = "surrealdb_rag.scripts:add_vectors_to_ai_industry_edgar"
insert_ai_edgar = "surrealdb_rag.scripts:insert_ai_industry_edgar"
add_ai_edgar = "surrealdb_rag.scripts:add_ai_edgar_data"
add_large_edgar_vectors = "surrealdb_rag.scripts:add_vectors_to_large_chunk_edgar"
insert_large_edgar = "surrealdb_rag.scripts:insert_large_chunk_edgar"
add_large_edgar = "surrealdb_rag.scripts:add_large_chunk_edgar_data"
app = "surrealdb_rag.scripts:app"
incriment_latest_edgar_graph = "surrealdb_rag.scripts:incriment_latest_edgar_graph"
setup_edgar_graph = "surrealdb_rag.scripts:setup_edgar_graph"
edgar_graph_extraction = "surrealdb_rag.scripts:edgar_graph_extraction"
insert_edgar_graph = "surrealdb_rag.scripts:insert_edgar_graph"
incriment_latest_edgar = "surrealdb_rag.scripts:incriment_latest_edgar"




