[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surrealdb_rag"
version = "0"
description = "Example of RAG using SurrealDB"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "wget",
    "pandas-stubs",
    "surrealdb",
    "tqdm",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "python-dotenv",
    "ollama",
    "google.generativeai",
    "openai",
    "fasttext",
    "edgartools",
    "bs4"
]

[project.scripts]
create-db = "surrealdb_rag.scripts:create_database"
download-glove-model = "surrealdb_rag.scripts:download_glove"
insert-glove-model = "surrealdb_rag.scripts:insert_glove"
download-wiki-data = "surrealdb_rag.scripts:download_wiki"
train-wiki-fasttext = "surrealdb_rag.scripts:train_wiki"
insert-wiki-fasttext-model = "surrealdb_rag.scripts:insert_wiki_fs"
add-vectors-wiki-csv = "surrealdb_rag.scripts:add_vectors_to_wiki"
insert-wiki-data = "surrealdb_rag.scripts:insert_wiki"
download-edgar-data = "surrealdb_rag.scripts:download_edgar"
train-edgar-fasttext = "surrealdb_rag.scripts:train_edgar"
insert-edgar-fasttext-model = "surrealdb_rag.scripts:insert_edgar_fs"
add-vectors-edgar-csv = "surrealdb_rag.scripts:add_vectors_to_edgar"
insert-edgar-data = "surrealdb_rag.scripts:insert_edgar"
run-app = "surrealdb_rag.scripts:app"