[package]
name = "surrealbook"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["http", "image"] }
image = { version = "0.25.5", features = ["jpeg", "png"] }
serde = "1.0.219"
serde_json = "1.0.140"
surrealdb = { version = "2.2.1", features = ["kv-mem"] }
tokio = "1.44.0"